k8s/service.yml
apiVersion: v1

kind: Service

metadata:
  name: pomodoro-svc
  namespace: pomodoro-ns

spec:
  type: NodePort

  selector:
    app: pomodoro

  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30070

























# a. type: NodePort
# A Service in Kubernetes helps connect your application (which is running in one or more pods) to other parts of your system or to the outside world.
# When the type is set to NodePort, it means this service will be accessible from outside the Kubernetes cluster.
# It does this by opening a specific port (in this case, 30070) on every node (a node is a machine, physical or virtual, in the Kubernetes cluster).
# So, anyone with access to your cluster's IP and port 30070 can reach your application running in the pod.
# b. selector
# The selector is like a filter.
# It finds the pods that this service should work with by looking at the labels on the pods.
# In this case, the selector says app: pomdoro, which means it will find all the pods that have this label (like a tag that says "I'm part of the Pomodoro app").
# This is how the service knows which pods to send traffic to.
# c. ports
# The ports section is where we specify how the service will handle incoming traffic.

# protocol: TCP
# TCP is a communication protocol, and it's what most web traffic uses. So, this just says "use TCP to communicate."
# port: 8000
# This is the port inside the Kubernetes cluster where the service is accessible. Other services inside the cluster can reach your service using port 8000.
# targetPort: 8000
# The targetPort is the port on the actual pod (your running application) where the service will forward the traffic.
# In this case, your application (pod) is listening on port 8000, so the service sends traffic to that port on the pod.
# nodePort: 30070
# nodePort is the port that is exposed externally on the nodes (machines in the Kubernetes cluster).
# This means you can reach your service from outside the Kubernetes cluster by using the node’s IP and port 30070.
